--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "dev": "ts-node-dev src/server.ts",
     "start": "node dist/server.js",
-    "build": "tsc"
+    "build": "tsc && prisma generate && prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
