--- a/server/package.json
+++ b/server/package.json
@@ -28,8 +28,10 @@
   "@types/nodemailer": "^6.4.4",
   "dependencies": {
     "@prisma/client": "^3.13.0",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "juice": "^8.0.0",
     "nodemailer": "^6.7.5"
   }
 }
